add new wifi drivers, touchscreen drivers upon request from the asus umpc community, remove unnecessary files, load mmc_block and hdaps modules on startup, set alsa Master and PCM volumes to max on startup

--- a/init.thinkpad_x41t.rc
+++ b/init.thinkpad_x41t.rc
@@ -4,5 +4,15 @@ on boot
 service wacom-input /system/bin/wacom-input
     disabled
 
+service amixer-master /system/bin/alsa_amixer set Master 100 on
+    oneshot
+    disabled
+
+service amixer-pcm /system/bin/alsa_amixer set PCM 100 on
+    oneshot
+    disabled
+
 on property:dev.bootcomplete=1
     start wacom-input
+    start amixer-master
+    start amixer-pcm
