--- a/x41t_defconfig
+++ b/x41t_defconfig
@@ -1426,7 +1426,13 @@ CONFIG_MOUSE_PS2=m
 # CONFIG_MOUSE_VSXXXAA is not set
 # CONFIG_MOUSE_SYNAPTICS_I2C is not set
 # CONFIG_INPUT_JOYSTICK is not set
-# CONFIG_INPUT_TABLET is not set
+CONFIG_INPUT_TABLET=y
+# CONFIG_TABLET_USB_ACECAD is not set
+# CONFIG_TABLET_USB_AIPTEK is not set
+# CONFIG_TABLET_USB_GTCO is not set
+# CONFIG_TABLET_USB_HANWANG is not set
+# CONFIG_TABLET_USB_KBTAB is not set
+CONFIG_TABLET_USB_WACOM=m
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
@@ -2478,7 +2484,7 @@ CONFIG_MMC_PARANOID_SD_INIT=y
 #
 # MMC/SD/SDIO Card Drivers
 #
-CONFIG_MMC_BLOCK=y
+CONFIG_MMC_BLOCK=m
 CONFIG_MMC_BLOCK_MINORS=8
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
@@ -2669,7 +2675,7 @@ CONFIG_DRM_NOUVEAU_DEBUG=y
 # CONFIG_LIRC_STAGING is not set
 # CONFIG_EASYCAP is not set
 # CONFIG_SOLO6X10 is not set
-# CONFIG_ACPI_QUICKSTART is not set
+CONFIG_ACPI_QUICKSTART=m
 CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_ATH6K_LEGACY is not set
 # CONFIG_USB_ENESTORAGE is not set
@@ -2697,7 +2703,7 @@ CONFIG_ASUS_LAPTOP=m
 # CONFIG_FUJITSU_LAPTOP is not set
 CONFIG_TC1100_WMI=m
 CONFIG_HP_ACCEL=m
-# CONFIG_HP_WMI is not set
+CONFIG_HP_WMI=m
 # CONFIG_MSI_LAPTOP is not set
 # CONFIG_PANASONIC_LAPTOP is not set
 # CONFIG_COMPAL_LAPTOP is not set
@@ -2710,14 +2716,14 @@ CONFIG_THINKPAD_ACPI_ALSA_SUPPORT=y
 # CONFIG_THINKPAD_ACPI_UNSAFE_LEDS is not set
 CONFIG_THINKPAD_ACPI_VIDEO=y
 CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
-CONFIG_SENSORS_HDAPS=y
+CONFIG_SENSORS_HDAPS=m
 # CONFIG_INTEL_MENLOW is not set
 CONFIG_EEEPC_LAPTOP=m
 # CONFIG_ASUS_WMI is not set
 CONFIG_ACPI_WMI=m
 # CONFIG_MSI_WMI is not set
 # CONFIG_S103T_WMI is not set
-# CONFIG_ACPI_ASUS is not set
+CONFIG_ACPI_ASUS=m
 # CONFIG_TOPSTAR_LAPTOP is not set
 # CONFIG_ACPI_TOSHIBA is not set
 # CONFIG_TOSHIBA_BT_RFKILL is not set
@@ -2738,7 +2744,7 @@ CONFIG_CLKSRC_I8253=y
 # CONFIG_DELL_RBU is not set
 # CONFIG_DCDBAS is not set
 CONFIG_DMIID=y
-# CONFIG_DMI_SYSFS is not set
+CONFIG_DMI_SYSFS=m
 # CONFIG_ISCSI_IBFT_FIND is not set
 # CONFIG_SIGMA is not set
 # CONFIG_GOOGLE_FIRMWARE is not set
@@ -3007,6 +3013,7 @@ CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
 CONFIG_CRYPTO_RNG2=y
+CONFIG_CRYPTO_PCOMP=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
@@ -3089,9 +3096,9 @@ CONFIG_CRYPTO_TWOFISH_586=y
 #
 # Compression
 #
-CONFIG_CRYPTO_DEFLATE=m
-# CONFIG_CRYPTO_ZLIB is not set
-# CONFIG_CRYPTO_LZO is not set
+CONFIG_CRYPTO_DEFLATE=y
+CONFIG_CRYPTO_ZLIB=y
+CONFIG_CRYPTO_LZO=y
 
 #
 # Random Number Generation
@@ -3117,7 +3124,8 @@ CONFIG_CRC32=y
 CONFIG_CRC7=m
 CONFIG_LIBCRC32C=m
 CONFIG_ZLIB_INFLATE=y
-CONFIG_ZLIB_DEFLATE=m
+CONFIG_ZLIB_DEFLATE=y
+CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_XZ_DEC=y
 CONFIG_XZ_DEC_X86=y
