--- a/init.thinkpad_x41t.rc
+++ b/init.thinkpad_x41t.rc
@@ -1,20 +1,22 @@
 on boot
     chown system system /sys/class/backlight/thinkpad_screen/brightness
-    
+
     setkeycode 0x6d 115
     setkeycode 0x6e 114
     setkeycode 0x69 28
-    setkeycode 0x6b 1
+    setkeycode 0x6b 158
     setkeycode 0x68 127
-    setkeycode 0x6c 125
+    setkeycode 0x6c 172
     setkeycode 0x67 116
+    
+    setprop system_init.startsurfaceflinger 0
 
 service wacom-input /system/bin/wacom-input
     disabled
 
-service amixer-master /system/bin/alsa_amixer set Master 100 on
-    oneshot
-    disabled
+#service amixer-master /system/bin/alsa_amixer set Master 100 on
+#    oneshot
+#    disabled
 
 service amixer-pcm /system/bin/alsa_amixer set PCM 100 on
     oneshot
@@ -24,3 +26,6 @@ on property:dev.bootcomplete=1
     start wacom-input
     start amixer-master
     start amixer-pcm
+
+    chmod 660 /sys/class/rfkill/rfkill0/state
+    chown system bluetooth /sys/class/rfkill/rfkill0/state
