don't restart tablet mode, because if no input switch is present, it will loop

--- a/init.thinkpad_x41t.rc
+++ b/init.thinkpad_x41t.rc
@@ -18,6 +18,7 @@ service wacom-input /system/bin/wacom-input
 service tablet-mode /system/bin/tablet-mode
     class late_start
     disabled
+    oneshot
 
 service amixer-pcm /system/bin/alsa_amixer set PCM 100 on
     oneshot
