clean up and add Speaker volume setting for x61t

--- a/init.thinkpad_x41t.rc
+++ b/init.thinkpad_x41t.rc
@@ -13,22 +13,27 @@ on boot
 
 service wacom-input /system/bin/wacom-input
     disabled
+    oneshot
 
 service tablet-mode /system/bin/tablet-mode
     disabled
     oneshot
 
-on property:sys.boot_completed=1
-    start tablet-mode
-
 service amixer-pcm /system/bin/alsa_amixer set PCM 100 on
-    oneshot
     disabled
+    oneshot
+
+service amixer-speaker /system/bin/alsa_amixer set Speaker 100 on
+    disabled
+    oneshot
 
 on property:dev.bootcomplete=1
     start wacom-input
-#    start tablet-mode
     start amixer-pcm
+    start amixer-speaker
 
     chmod 660 /sys/class/rfkill/rfkill0/state
     chown system bluetooth /sys/class/rfkill/rfkill0/state
+
+on property:sys.boot_completed=1
+    start tablet-mode
